--- a/EasyLearn/App.xaml
+++ b/EasyLearn/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="EasyLearn.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:EasyLearn">
+             xmlns:local="clr-namespace:EasyLearn"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
