--- a/EasyLearn/UI/CustomControls/AvailableRelationView.xaml
+++ b/EasyLearn/UI/CustomControls/AvailableRelationView.xaml
@@ -8,6 +8,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
-    <materialdesign:Chip Margin="10 0 0 0" Content="{Binding English}"/>
+    <materialdesign:Chip Margin="10 0 0 0" Content="{Binding Value}"/>
 
 </UserControl>
