--- a/EasyLearn/UI/CustomControls/Dictionaries/VerbPrepositionDictionaryView.xaml
+++ b/EasyLearn/UI/CustomControls/Dictionaries/VerbPrepositionDictionaryView.xaml
@@ -90,8 +90,8 @@
 
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="2.4*"/>
+                    <RowDefinition Height="0.8*" />
+                    <RowDefinition Height="2*"/>
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
@@ -103,8 +103,7 @@
                         <!--Кнопка возвращающая на лицевую сторону карточки-->
                         <Button Style="{DynamicResource MaterialDesignToolForegroundButton}"
                                 HorizontalAlignment="Left"
-                                IsEnabled="{Binding BackButtonIsEnabled}"
-                                ToolTip="Подтвердить изменения и вернуться">
+                                IsEnabled="{Binding BackButtonIsEnabled}">
 
                             <materialDesign:PackIcon Kind="ArrowLeft" HorizontalAlignment="Right" />
 
@@ -126,11 +125,11 @@
                 <!--Редактировать название словаря-->
                 <TextBox materialDesign:HintAssist.Hint="Название" 
                          materialDesign:HintAssist.IsFloating="True"
-                         Grid.Row="1"
-                         Margin="0 10 0 0"
-                         Width="172"
-                         HorizontalAlignment="Center"
-                         VerticalAlignment="Top"
+                         Grid.Row="1"         
+                         
+                         HorizontalAlignment="Stretch"
+                         VerticalAlignment="Stretch"
+                         Style="{DynamicResource MaterialDesignFilledTextBox}"
                          Text="{Binding EditNameFieldValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
 
                     <i:Interaction.Triggers>
@@ -143,8 +142,9 @@
                 <!--Редактировать описание словаря-->
                 <TextBox TextWrapping="Wrap"
                          VerticalAlignment="Stretch"
-                         Width="172"
-                         VerticalScrollBarVisibility="Auto"
+                         HorizontalAlignment="Stretch"
+                         MaxLength="85"
+                         Style="{DynamicResource MaterialDesignFilledTextBox}"
                          materialDesign:HintAssist.Hint="Описание"
                          materialDesign:HintAssist.IsFloating="True"
                          Grid.Row="2"
