--- a/EasyLearn/UI/Pages/UsersPage.xaml
+++ b/EasyLearn/UI/Pages/UsersPage.xaml
@@ -5,6 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       xmlns:validation="clr-namespace:EasyLearn.Infrastructure.Validation"
+      xmlns:constants="clr-namespace:EasyLearn.Data.Constants;assembly=EasyLearn.Data"
       xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
@@ -40,18 +41,20 @@
 
 
                 <Button.CommandParameter>
-                    <StackPanel Margin="10 10 10 0">
+                    <StackPanel Margin="14">
 
                         <!--Имя пользователя-->
-                        <TextBox Style="{DynamicResource MaterialDesignFloatingHintTextBox}"
-                                 Width="200" 
+                        <TextBox Style="{DynamicResource EasyTextBox}"
+                                 Width="200"
+                                 Padding="14 11"
                                  materialDesign:HintAssist.Hint="Имя пользователя"
                                  KeyDown="OnUserNameValueTextBoxKeyDown">
 
                             <TextBox.Text>
                                 <Binding Path="AddingWindowUserNameValue" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay">
                                     <Binding.ValidationRules>
-                                        <validation:InRange Group="AddNewUser" Min="1" Max="12"/>
+                                        <validation:NotEmpty Group="AddNewUser" ValidatesOnTargetUpdated="True"/>
+                                        <validation:InRange Max="{x:Static constants:ModelConstants.UserNameMaxLength}" Group="AddNewUser" ValidatesOnTargetUpdated="True"/>
                                     </Binding.ValidationRules>
                                 </Binding>
                             </TextBox.Text>
@@ -65,13 +68,17 @@
                         </TextBox>
 
                         <!--Кнопки отмены и подтверждения добавления-->
-                        <StackPanel Orientation="Horizontal"
-                                    Margin="0 10 0 0">
+                        <Grid>
 
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            
                             <!--Кнопка отмены добавления нового аккаунта-->
-                            <Button Style="{DynamicResource MaterialDesignFlatButton}" 
+                            <Button Style="{DynamicResource EasyCancelButton}" 
                                     Content="Отмена"
-                                    Margin="6"
+                                    Grid.Column="0"
                                     Name="cancelUserAddingButton">
                                 <i:Interaction.Triggers>
                                     <i:EventTrigger EventName="Click">
@@ -82,10 +89,9 @@
                             </Button>
 
                             <!--Кнопка подтверждения добавления нового аккаунта-->
-                            <Button Style="{DynamicResource MaterialDesignFlatButton}"  
-                                    HorizontalAlignment="Center"
+                            <Button Style="{DynamicResource EasyConfirmButton}"
                                     Content="Добавить"
-                                    Margin="10"
+                                    Grid.Column="1"
                                     Name="confirmUserAddingButton"
                                     IsEnabled="{Binding ConfirmUserAddingButtonIsEnabled}">
 
@@ -97,7 +103,7 @@
                                     </i:EventTrigger>
                                 </i:Interaction.Triggers>
                             </Button>
-                        </StackPanel>
+                        </Grid>
                     </StackPanel>
                 </Button.CommandParameter>
             </Button>
